# NLP-Project-SQuAD-QA

./: .gitignore  README.md  compute_answers.py  config.json  pyproject.toml
layers/: positional_encoder.py
model/: ContextQueryAttention.py  EmbeddingEncoder.py  InputEmbedding.py  ModelEncoder.py  Output.py  PositionalEncoder.py  QANet.py  context_query_attention.py  model.py
notebooks/: Error Analysis.ipynb  Training.ipynb
predictions/: training_set_predictions_sample.json  validation_set_predictions.json
report/: bibliography.bib  document.tex
report/parts/: abstract.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  conclusion.tex  titlepage.tex
scripts/: squad-reader.py  test_set_preprocessing.py  training_set_preprocessing.py  utils.py
squad/: squad_dataset.py
trained_model/: char2idx.json  char_embeddings.npz  epoch10_f1_69.59317_em_55.00389.pth.tar  glove_embeddings.npz  word2idx.json
training/: model_trainer.py  utils.py
utils/: data_reader.py
