[tool.poetry]
name = "nlp-project-squad-qa"
version = "0.1.0"
description = ""
authors = ["Andrea Pinto <andrea.pinto2@studio.unibo.it>, Giorgio Buzzanca <giorgio.buzzanca@studio.unibo.it>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
