[tool.poetry]
name = "nlp-project-squad-qa"
version = "0.1.0"
description = ""
authors = ["Andrea Pinto <andrea.pinto2@studio.unibo.it>, Giorgio Buzzanca <giorgio.buzzanca@studio.unibo.it>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.22.1"
pandas = "^1.3.5"
jupyterlab = "^3.2.8"
matplotlib = "^3.5.1"
ipympl = "^0.8.6"
jupyter-contrib-nbextensions = "^0.5.1"
scikit-learn = "^1.0.2"
torch = "^1.10.1"
click = "^8.0.3"
spacy = "^3.2.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
